remaining-tasks/ts-type-checker/tests/hidden_cases/test_files/objectLiteralShorthandPropertiesFunctionArgument2.ts
// @target: es2015
// @lib: es5
type kUtMWgshaQuh = number;
var id: number = 10000;
var name: string = "my name";

var mFRWM0 = { name, id };

function dPb(p: { a: string; id: number }) { }
dPb(mFRWM0);  // error
